--- a/.devcontainer/Dockerfile
+++ b/.devcontainer/Dockerfile
@@ -1,3 +1,3 @@
 FROM codesimple/elm:0.19
-RUN apk add --no-cache git
-RUN npm install -g elm-format
+RUN apk add --no-cache git npm
+RUN npm install -g elm-format --unsafe-perm=true
