--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -22,21 +22,13 @@ jobs:
     # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
     - uses: actions/checkout@v2
 
-    # Runs a single command using the runners shell
-    - name: Run a one-line script
-      run: echo Hello, world!
-
-    # Runs a set of commands using the runners shell
-    - name: Run a multi-line script
-      run: |
-        echo Add other actions to build,
-        echo test, and deploy your project.
-
     - name: Setup Elm
       uses: justgook/setup-elm@v1
       with:
         # Version of Elm to use. E.g. 0.19.1
         elm-version: 0.19.1
+
+    - run: elm make src/Main.elm --output=dist/index.html --optimize
 
     - name: GitHub Pages
       uses: crazy-max/ghaction-github-pages@v1.3.0
