Try GoogleCloudPlatform/github-actions/setup-gcloud

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -40,16 +40,16 @@ jobs:
       env:
         GITHUB_PAT: ${{ secrets.GITHUB_PAT }}
 
-    - name: Initialize Google Cloud SDK
-      uses: zxyle/publish-gae-action@master
+    - uses: GoogleCloudPlatform/github-actions/setup-gcloud@master
       with:
+        version: '285.0.0'
+        project_id: ${{ secrets.PROJECT_ID }}
         service_account_email: ${{ secrets.GCP_SA_EMAIL }}
         service_account_key: ${{ secrets.GCP_SA_KEY }}
-        project_id: ${{ secrets.PROJECT_ID }}
+        export_default_credentials: true
+
+    - run: gcloud info
     
     - name: Publish app to Google App Engine
-      run: |
-        # This client-secret.json is converted by GCP_SA_KEY.
-        gcloud auth activate-service-account ${{ secrets.GCP_SA_EMAIL }} --key-file=client-secret.json
-        gcloud config set project ${{ secrets.PROJECT_ID }}
+      run:
         gcloud -q app deploy backend/app.yaml --promote
