--- a/.devcontainer/Dockerfile
+++ b/.devcontainer/Dockerfile
@@ -11,6 +11,11 @@ RUN apt-get install -y apt-transport-https gnupg
 RUN curl https://packages.cloud.google.com/apt/doc/apt-key.gpg | apt-key --keyring /usr/share/keyrings/cloud.google.gpg add -
 RUN apt-get update && apt-get install -y google-cloud-sdk google-cloud-sdk-app-engine-go
 
+# Go
+RUN curl https://dl.google.com/go/go1.14.1.linux-amd64.tar.gz | tar -C /usr/local -xz
+RUN /usr/local/go/bin/go get -v github.com/ramya-rao-a/go-outline
+ENV PATH="/usr/local/go/bin:${PATH}"
+
 # Elm
 RUN curl -L https://github.com/elm/compiler/releases/download/0.19.1/binary-for-linux-64-bit.gz | gunzip -c >/usr/local/bin/elm
 RUN chmod +x /usr/local/bin/elm
