--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -34,7 +34,7 @@ jobs:
       if: success()
       uses: crazy-max/ghaction-github-pages@v1.3.0
       with:
-        build_dir: dist
+        build_dir: backend/static
         fqdn: kom.one
       env:
         GITHUB_PAT: ${{ secrets.GITHUB_PAT }}
