--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -14,7 +14,7 @@ jobs:
     - uses: actions/checkout@v2
 
     - name: Write Strava API config file    
-      run: 'echo "$SSH_KEY" > strava_client_secret'
+      run: 'echo "$SSH_KEY" > backend/strava_client_secret'
       shell: bash
       env:
         SSH_KEY: ${{secrets.STRAVA_CLIENT_SECRET}}
