--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -3,35 +3,27 @@ on: push
 jobs:
   build:
     runs-on: ubuntu-latest
-    outputs:
-      status: ${{ steps.early.conclusion }}
+    env:
+      IMAGE_NAME: gcr.io/segmentor-340421/segmentor:latest
     steps:
+      - name: Login
+        uses: google-github-actions/setup-gcloud@v0
+        with:
+          project_id: segmentor-340421
+          service_account_email: github-actions@segmentor-340421.iam.gserviceaccount.com
+          service_account_key: ${{ secrets.GCP_SA_KEY }}
+
+      - name: Configure Docker
+        run: gcloud auth configure-docker --quiet
+          
       - name: Checkout code
         uses: actions/checkout@v2
 
-      - name: Rust toolchain
-        uses: actions-rs/toolchain@v1
-        with:
-          toolchain: stable
+      - name: Build Docker image
+        run: docker build . -t $IMAGE_NAME
 
-      - name: Build
-        uses: actions-rs/cargo@v1
-        with:
-          command: build
-          args: --release --all-features
+      - name: Push Docker image
+        run: docker push $IMAGE_NAME
 
-      - id: 'auth'
-        uses: 'google-github-actions/auth@v0'
-        with:
-          credentials_json: '${{ secrets.GCP_SA_KEY }}'
-
-      - id: 'deploy'
-        uses: 'google-github-actions/deploy-cloudrun@v0'
-        with:
-          service: 'segmentor'
-          image: 'gcr.io/cloudrun/segmentor:latest'
-          region: europe-north1
-          project_id: 'segmentor-340421'
-
-      - name: 'Use output'
-        run: 'curl "${{ steps.deploy.outputs.url }}"'
+      - name: Deploy Docker image
+        run: gcloud run deploy segmentor-340421 --image $IMAGE_NAME --region europe-north1 --platform managed
