--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,6 +8,10 @@ edition = "2021"
 [dependencies]
 anyhow = "1.0.53"
 oauth2 = "4.1.0"
-rocket = "0.5.0-rc.1"
 strava = { git = "https://github.com/torhovland/strava-rs" }
 tokio = { version = "1.16.1", features = ["macros", "rt-multi-thread"] }
+axum = "0.4.8"
+serde = { version = "1.0", features = ["derive"] }
+serde_json = "1.0.68"
+tracing = "0.1"
+tracing-subscriber = { version = "0.3", features = ["env-filter"] }
