--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,3 +15,4 @@ serde = { version = "1.0.136", features = ["derive"] }
 serde_json = "1.0.79"
 tracing = "0.1.31"
 tracing-subscriber = { version = "0.3.9", features = ["env-filter"] }
+tower-http = { version = "0.2.0", features = ["fs", "trace"] }
