--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,3 +16,4 @@ serde_json = "1.0.79"
 tracing = "0.1.32"
 tracing-subscriber = { version = "0.3.9", features = ["env-filter"] }
 tower-http = { version = "0.2.5", features = ["fs", "trace"] }
+reqwest = "0.11.10"
