--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,7 +10,7 @@ anyhow = "1.0.56"
 oauth2 = "4.1.0"
 strava = { git = "https://github.com/torhovland/strava-rs" }
 tokio = { version = "1.17.0", features = ["macros", "rt-multi-thread"] }
-axum = "0.4.8"
+axum = { version = "0.4.8", features = ["ws"] }
 serde = { version = "1.0.136", features = ["derive"] }
 serde_json = "1.0.79"
 tracing = "0.1.32"
