--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -7,7 +7,7 @@ jobs:
       IMAGE_NAME: gcr.io/segmentor-340421/segmentor:latest
     steps:
       - name: Checkout code
-        uses: actions/checkout@v2
+        uses: actions/checkout@v2.4.0
 
       - name: Login to GCP
         uses: google-github-actions/setup-gcloud@v0
@@ -16,12 +16,33 @@ jobs:
           service_account_email: github-actions@segmentor-340421.iam.gserviceaccount.com
           service_account_key: ${{ secrets.GCP_SA_KEY }}
 
-      - name: Cache install Nix packages
-        uses: rikhuijzer/cache-install@v1.0.9
+      - run: |
+        # Create with liberal rights, otherwise cache action will complain
+        # about permission errors.
+        sudo mkdir -p /nix/store
+        sudo chmod -R 777 /nix
+
+      - name: Cache nix env take N+1
+        uses: actions/cache@v2
         with:
-          key: nix-${{ hashFiles('cachepackages.nix') }}
-          nix_file: 'cachepackages.nix'
-          
+          path: |
+            # See https://github.com/actions/cache/pull/726
+            /nix/store/**
+            # Missing something?
+            /nix/var/nix/*/*
+            /nix/var/nix/db/*
+            /nix/var/nix/db/*/**
+            !/nix/var/nix/daemon-socket/socket
+            !/nix/var/nix/userpool/*
+            !/nix/var/nix/gc.lock
+            !/nix/var/nix/db/big-lock
+            !/nix/var/nix/db/reserved
+          key: ${{ runner.os }}-nix-store
+
+      - uses: cachix/install-nix-action@v15
+        with:
+          nix_path: nixpkgs=channel:nixos-unstable
+
       - name: Install crate2nix
         run: nix-env -i -f https://github.com/kolloch/crate2nix/tarball/master
 
