--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -25,7 +25,7 @@ jobs:
 
       - uses: cachix/install-nix-action@v15
         with:
-          nix_path: nixpkgs=channel:nixpkgs-unstable
+          nix_path: nixpkgs=channel:nixos-21.11
 
       - name: Install crate2nix
         run: nix-env -i -f https://github.com/kolloch/crate2nix/tarball/master
