--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -16,26 +16,12 @@ jobs:
           service_account_email: github-actions@segmentor-340421.iam.gserviceaccount.com
           service_account_key: ${{ secrets.GCP_SA_KEY }}
 
-      - name: Create Nix dir
-        run: |
-          # Create with liberal rights, otherwise cache action will complain
-          # about permission errors.
-          sudo mkdir -p /nix/store
-          sudo chmod -R 777 /nix
-          sudo rm -rf /nix
-
       - uses: cachix/install-nix-action@v15
         with:
           nix_path: nixpkgs=channel:nixos-21.11
 
-      - name: Install crate2nix
-        run: nix-env -i -f https://github.com/kolloch/crate2nix/tarball/master
-
-      - name: Run crate2nix
-        run: crate2nix generate
-
       - name: Build
-        run: nix-build
+        run: nix build
 
       - name: Configure Docker
         run: gcloud auth configure-docker --quiet
