--- a/backend/Cargo.toml
+++ b/backend/Cargo.toml
@@ -16,5 +16,5 @@ serde_json = "1.0.79"
 tracing = "0.1.34"
 tracing-subscriber = { version = "0.3.11", features = ["env-filter"] }
 tower-http = { version = "0.2.5", features = ["fs", "trace"] }
-reqwest = "0.11.10"
+reqwest = { version = "0.11.10", features = ["rustls-tls"] }
 tower-cookies = "0.6.0"
