--- a/backend/Cargo.toml
+++ b/backend/Cargo.toml
@@ -18,4 +18,4 @@ tracing-subscriber = { version = "0.3.11", features = ["env-filter"] }
 tower-http = { version = "0.2.5", features = ["fs", "trace"] }
 reqwest = "0.11.10"
 tower-cookies = "0.6.0"
-sqlx = { version = "0.5", features = [ "runtime-tokio-rustls", "postgres" ] }
+sqlx = { version = "0.5", features = [ "runtime-tokio-rustls", "postgres", "chrono" ] }
