--- a/backend/Cargo.toml
+++ b/backend/Cargo.toml
@@ -6,16 +6,17 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-anyhow = "1.0.56"
-oauth2 = "4.1.0"
+anyhow = "1.0.57"
+oauth2 = "4.2.0"
 strava = { git = "https://github.com/torhovland/strava-rs" }
-tokio = { version = "1.17.0", features = ["macros", "rt-multi-thread"] }
-axum = { version = "0.5.1", features = ["ws"] }
-serde = { version = "1.0.136", features = ["derive"] }
-serde_json = "1.0.79"
+tokio = { version = "1.19.2", features = ["macros", "rt-multi-thread"] }
+axum = { version = "0.5.6", features = ["ws"] }
+serde = { version = "1.0.137", features = ["derive"] }
+serde_json = "1.0.81"
 tracing = "0.1.34"
 tracing-subscriber = { version = "0.3.11", features = ["env-filter"] }
-tower-http = { version = "0.2.5", features = ["fs", "trace"] }
+tower-http = { version = "0.3.4", features = ["fs", "trace"] }
 reqwest = "0.11.10"
 tower-cookies = "0.6.0"
-sqlx = { version = "0.5", features = [ "runtime-tokio-rustls", "postgres", "chrono" ] }
+sqlx = { version = "0.5.13", features = [ "runtime-tokio-rustls", "postgres", "chrono" ] }
+axum-macros = "0.2.2"
