--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -1,47 +1,24 @@
 {
-    // Use IntelliSense to learn about possible attributes.
-    // Hover to view descriptions of existing attributes.
-    // For more information, visit: https://go.microsoft.com/fwlink/?linkid=830387
-    "version": "0.2.0",
-    "configurations": [
-        {
-            "type": "lldb",
-            "request": "launch",
-            "name": "Debug executable 'segmentor'",
-            "cargo": {
-                "args": [
-                    "build",
-                    "--bin=segmentor",
-                    "--package=segmentor"
-                ],
-                "filter": {
-                    "name": "segmentor",
-                    "kind": "bin"
-                }
-            },
-            "args": [
-                "~/.segmentor/access-token"
-            ],
-            "cwd": "${workspaceFolder}"
-        },
-        {
-            "type": "lldb",
-            "request": "launch",
-            "name": "Debug unit tests in executable 'segmentor'",
-            "cargo": {
-                "args": [
-                    "test",
-                    "--no-run",
-                    "--bin=segmentor",
-                    "--package=segmentor"
-                ],
-                "filter": {
-                    "name": "segmentor",
-                    "kind": "bin"
-                }
-            },
-            "args": [],
-            "cwd": "${workspaceFolder}"
-        }
-    ]
+  // Use IntelliSense to learn about possible attributes.
+  // Hover to view descriptions of existing attributes.
+  // For more information, visit: https://go.microsoft.com/fwlink/?linkid=830387
+  "version": "0.2.0",
+  "configurations": [
+    {
+      "request": "launch",
+      "name": "Launch Program",
+      "type": "node",
+      "program": "${workspaceFolder}/main.ts",
+      "cwd": "${workspaceFolder}",
+      "env": {},
+      "runtimeExecutable": "/opt/homebrew/bin/deno",
+      "runtimeArgs": [
+        "run",
+        "--unstable",
+        "--inspect-wait",
+        "--allow-all"
+      ],
+      "attachSimplePort": 9229
+    }
+  ]
 }
